--- a/front/src/app/core/principal/principal-header/principal-header.component.html
+++ b/front/src/app/core/principal/principal-header/principal-header.component.html
@@ -3,10 +3,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12">
-                    <h1 class="jumbotron-heading">{{title}}</h1>
+                    <strong><h1 class="jumbotron-heading">{{title}}</h1></strong>
                     <p class="lead text-muted">{{description}}</p>
                 </div>
             </div>
         </div>
     </section>
 </header>
+
+
