--- a/front/src/app/core/principal/principal.component.html
+++ b/front/src/app/core/principal/principal.component.html
@@ -1,7 +1,4 @@
-<header-app></header-app>
-<div class="album py-5 bg-light">
-  <div class="container">
-  </div>
-</div>
+<principal-header></principal-header>
+<principal-list></principal-list>
 <footer></footer>
 
