--- a/front/src/app/core/app.component.html
+++ b/front/src/app/core/app.component.html
@@ -1,1 +1,6 @@
+<div class="collapse navbar-collapse" >
+    <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Home</a></li>
+      </ul>
+</div>
 <router-outlet></router-outlet>
