--- a/front/src/app/core/race/race-header/race-header.component.html
+++ b/front/src/app/core/race/race-header/race-header.component.html
@@ -3,8 +3,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12">
-                    <strong><h1 class="jumbotron-heading">{{title}}</h1></strong>
-                    <p class="lead text-muted">{{description}}</p>
+                    <strong><h1 class="jumbotron-heading">Race</h1></strong>
+                    <p class="lead text-muted">Description</p>
                 </div>
             </div>
         </div>
