--- a/front/src/app/core/race/race.component.html
+++ b/front/src/app/core/race/race.component.html
@@ -1,12 +1,4 @@
-<header>
-    <section class = "jumbotron text-center">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12">
-                    <strong><h1 class="jumbotron-heading">Race</h1></strong>
-                    <p class="lead text-muted">Description</p>
-                </div>
-            </div>
-        </div>
-    </section>
-</header>
+<race-header></race-header>
+<div class="container">
+    <race-list></race-list>
+</div>
