Complete more of race detail

--- a/front/src/app/core/race/race.component.html
+++ b/front/src/app/core/race/race.component.html
@@ -1,4 +1,14 @@
 <race-header></race-header>
 <div class="container">
+    <nav class="navbar navbar-light bg-light">
+        <form class="form-inline">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          <button type="button"  class="btn" data-toggle="Add race" title="Add race">Add race</button>
+        </form>
+    </nav>
+</div>
+<hr>
+<div class="container">
     <race-list></race-list>
 </div>
