--- a/front/src/app/core/race/race-list/race-list.component.html
+++ b/front/src/app/core/race/race-list/race-list.component.html
@@ -3,7 +3,7 @@
     <div class="card-deck">
       <div class="col-md-4" *ngFor="let race of races">
         <div class="card mb-4 box-shadow" >
-            <a href="#">
+            <a a href="/race/mock" routerLink="/race/mock">
               <img class="card-img-top"  data-src="{{race.imagePath}}" alt="{{race.name}}" style="height: 205px; width: 100%; display: block;" src="{{race.imagePath}}">
             </a>
             <div class="card-body">
